<resources>
    <string name="app_name">MobileLab1</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="don_t_have_account">Don`t have account? Create one</string>
    <string name="sign_up">Sign up</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm password</string>
    <string name="email_error_message">Email format is not correct</string>
    <string name="Password_error_message">Password format is not correct</string>
</resources>
